<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingRight="10dp"
    android:paddingBottom="20dp"
    android:paddingLeft="10dp"
    android:paddingTop="20dp"
    android:layout_gravity="center"
    android:weightSum="7"
    android:id="@+id/FirstPageLayout"
    android:background="@mipmap/paper_img1"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif-monospace"
            android:textStyle="bold"
            android:text="Tic Tac Toe"
            android:gravity="center"
            android:textColor="#000000"
            android:textSize="30sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif-monospace"
            android:textStyle="bold"
            android:text="Game Options"
            android:textColor="#000000"
            android:textSize="15sp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            >
        
            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:weightSum="6"
                    >
                    <ImageButton
                        android:id="@+id/img1"
                        android:layout_width="80dp"
                        android:layout_height="match_parent"
                        android:background="@mipmap/paper_img2"
                        android:layout_margin="10dp"
                        android:layout_weight="1"/>

                    <ImageButton
                        android:id="@+id/img2"
                        android:layout_width="80dp"
                        android:layout_height="match_parent"
                        android:background="@mipmap/paper_img3"
                        android:layout_margin="10dp"
                        android:layout_weight="1"/>
                    
                    <ImageButton
                        android:id="@+id/img3"
                        android:layout_width="80dp"
                        android:layout_height="match_parent"
                        android:background="@mipmap/paper_img4"
                        android:layout_margin="10dp"
                        android:layout_weight="1"/>

                    <ImageButton
                        android:id="@+id/img4"
                        android:layout_width="80dp"
                        android:layout_height="match_parent"
                        android:background="@mipmap/paper_img5"
                        android:layout_margin="10dp"
                        android:layout_weight="1"/>
            
                    <ImageButton
                        android:id="@+id/img5"
                        android:layout_width="80dp"
                        android:layout_height="match_parent"
                        android:background="@mipmap/paper_img6"
                        android:layout_margin="10dp"
                        android:layout_weight="1"/>
            
                    <ImageButton
                        android:id="@+id/img6"
                        android:layout_width="80dp"
                        android:layout_height="match_parent"
                        android:background="@mipmap/paper_img7"
                        android:layout_margin="10dp"
                        android:layout_weight="1"/>
                    
                    <ImageButton
                        android:id="@+id/img7"
                        android:layout_width="80dp"
                        android:layout_height="match_parent"
                        android:background="@mipmap/paper_img8"
                        android:layout_margin="10dp"
                        android:layout_weight="1"/>

                </LinearLayout>
            </HorizontalScrollView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <ImageButton
                android:id="@+id/ademo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@mipmap/a_demo"
                android:layout_margin="10dp"
                android:layout_weight="1"/>

            <ImageButton
                android:id="@+id/bdemo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@mipmap/b_demo"
                android:layout_margin="10dp"
                android:layout_weight="1"/>

            <ImageButton
                android:id="@+id/cdemo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@mipmap/c_demo"
                android:layout_margin="10dp"
                android:layout_weight="1"/>

            <ImageButton
                android:id="@+id/ddemo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@mipmap/d_demo"
                android:layout_margin="10dp"
                android:layout_weight="1"/>

            <ImageButton
                android:id="@+id/edemo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@mipmap/e_demo"
                android:layout_margin="10dp"
                android:layout_weight="1"/>

            <ImageButton
                android:id="@+id/fdemo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@mipmap/f_demo"
                android:layout_margin="10dp"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <RadioGroup
                android:id="@+id/RG"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="15dp">

                <RadioButton
                    android:id="@+id/RB1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Easy"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:textColor="#000000"
                    android:fontFamily="serif-monospace"
                    android:textStyle="bold"/>

                <RadioButton
                    android:id="@+id/RB2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Medium"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:textColor="#000000"
                    android:fontFamily="serif-monospace"
                    android:textStyle="bold"/>

                <RadioButton
                    android:id="@+id/RB3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Hard"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:textColor="#000000"
                    android:fontFamily="serif-monospace"
                    android:textStyle="bold"/>

            </RadioGroup>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:weightSum="3">

        <Button
            android:id="@+id/Back"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="2"
            android:background="@drawable/trans_bkgd"
            android:fontFamily="serif-monospace"
            android:text="@string/BACK"
            android:textColor="#000000"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/start"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="30dp"
            android:background="@drawable/trans_bkgd"
            android:text="@string/START"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="#000000"
            android:layout_gravity="center"
            android:fontFamily="serif-monospace"
            />

    </LinearLayout>




</LinearLayout>